# cs-courses

./: README.md
AI/final/: 《人工智能》考点（不带答案）.docx
AI/final/other/: from.md
Cpp/lecture/Codes 11/: CMakeLists.txt
Cpp/lecture/Codes 11/Codes 11/: ex.cpp  ex.h  sayings1.cpp  strbad.h  string1.cpp  string1.h  strngbad.cpp  vegnews.cpp
Cpp/lecture/Codes 12/: CMakeLists.txt
Cpp/lecture/Codes 12/Codes 12/: brass.cpp  brass.h  ex.cpp  tabtenn0.cpp  tabtenn1.cpp  tblt1.h  usett1.cpp
Cpp/lecture/Codes 7/: CMakeLists.txt
Cpp/lecture/Codes 8/: newplace.cpp
Cpp/lecture/Codes 9/: CMakeLists.txt
Cpp/lecture/Codes 9/Codes 9/: ex.cpp  ex.hpp  exx.cpp  stock00.cpp  stock00.h  stock01.cpp  usestok01.cpp
ML/final/: README.txt
ML/lab/01Python/: practice.ipynb
ML/lab/02Preliminary/: Lab02_Assignment_Template.ipynb  Lab02_Preliminary.ipynb
ML/lab/03NaiveBayes/: Lab3.Naïve-Bayes.ipynb  Lab3.ipynb
ML/lab/04LinearRegression/: Lab4-Linear-Regression.ipynb
ML/lab/08CNN/: CNN.ipynb  (+2 more)
NLP/exam/: CSE538 sp24_ Exam 1 Review Guide [not for reshareing].docx
NLP/sbu-slides/: README.md
algorithm-design/slides/: 04mst.ppt  05divide-and-conquer.ppt  05fft.ppt  07networkflow.ppt
computer-organization/mind-maps/: Computer Architecture Computer Organization And Design.xmind  chapter1.xmind  chapter2.xmind  chapter3.xmind
discrete-math/mind-maps/: 1. 2. logic.xmind  3. set and functions.xmind  4. complexity of algorithms.xmind  5. Number Theory and Cryptography.xmind  6. introduction & recursion.xmind  7. counting.xmind  8. relation.xmind  9.graphs & trees.xmind  discrete math.xmind
evolutionary-computing/mind-map/: 02 crossover & mutation.xmind  03 Selection Schemes.xmind  04 Case Studies.xmind  05 Combinatorial Optimisation.xmind  06 Population diversity, Niching, Speciation & Co-Evolution.xmind  07 Co-evolutionary Learning.xmind  08 Multi-Objective Evolutionary Optimisation.xmind  09 Constraint Handling.xmind  10 Genetic Programming.xmind  11 Evolutionary Learning.xmind  12 Theoretical Analysis.xmind
java/CS102A_notes_week04/: OJV2.pptx
java2/slides/: lecture6-exception.pptx  lecture7-multithreading.pptx
probability-statistics/midterms/: 2021-22学年 春季学期 概率论与数理统计 期中考卷及答案.docx
probability-statistics/mind-maps/: 7. 参数估计.xmind  一. basic concept.xmind  一.basic concept.xmind  三. 联合分布.xmind  二. 随机变量.xmind  四. 随机变量的数字特征.xmind
signals-and-systems/slides/: Chapter 3-1.pptx  Chapter 3-2.pptx
(+76 files in other folders)
