cmake_minimum_required(VERSION 3.24)
project(Codes_12)

set(CMAKE_CXX_STANDARD 14)

include_directories("Codes 12")

add_executable(Codes_12
        "Codes 12/brass.cpp"
#        "Codes 12/brass.h"
#        "Codes 12/dma.cpp"
#        "Codes 12/dma.h"
#        "Codes 12/tabtenn0.cpp"
#        "Codes 12/tabtenn1.cpp"
#        "Codes 12/tblt0.h"
#        "Codes 12/tblt1.h"
#        "Codes 12/usebrass1.cpp"
#        "Codes 12/usebrass2.cpp"
#        "Codes 12/usedma.cpp"
#        "Codes 12/usett0.cpp"
#        "Codes 12/usett1.cpp"
        )

add_executable(ex "Codes 12/ex.cpp")
