cmake_minimum_required(VERSION 3.24)
project(Codes_7)

set(CMAKE_CXX_STANDARD 14)

add_executable(Codes_7
        "Codes 7/twoswap.cpp"
        )
#"Codes 7/funtemp.cpp"
#"Codes 7/left.cpp"
#"Codes 7/leftover.cpp"
#"Codes 7/secref.cpp"
#"Codes 7/strc_ref.cpp"
#"Codes 7/strquote.cpp"
#"Codes 7/swaps.cpp"
#"Codes 7/twotemps.cpp"
